--- a/CSS.css
+++ b/CSS.css
@@ -1,7 +1,18 @@
-.droite{width:30%;
-	float:left;
-	margin-left:3%;}
+.gauche{width:20%;
+		float:left;
+		margin-left:5%;}
 
-.gauche{width:70%
-	float:right;
-	margin-right:3%;}
+.droite{width:65%;
+		float:right;
+		margin-right:5%;}
+
+.gauched1{width:45%;
+		float:left;
+		margin-right:2%;
+		}
+.droited1{width:45%;
+		float:right;
+		margin-left:2%;
+		}
+
+.textcenter{text-align:center;}
