--- a/CSS.css
+++ b/CSS.css
@@ -7,7 +7,8 @@
 		float:right;
 		margin-right:10%;
 		border-color: #0000ff;
-		border-left-style:solid;}
+		border-left-style:solid;
+		margin-bottom: 10%;}
 
 .gauched1{width:45%;
 		float:left;
