--- a/CSS.css
+++ b/CSS.css
@@ -6,21 +6,28 @@
 .droite{width:58%;
 		float:right;
 		margin-right:10%;
-		border-color: #0000ff;
+		border-color: #00ffff;
 		border-left-style:solid;
 		margin-bottom: 10%;}
 
 .gauched1{width:45%;
 		float:left;
-		margin-right:2%;
+		margin-right:1%;
 		}
 .droited1{width:45%;
 		float:right;
-		margin-left:2%;
+		margin-left:1%;
 		}
 
 .textcenter{text-align:center;}
 .menu{
 	margin-left:10%;
 	margin-right:10%;
+}
+.mdl-slider__container{
+    background-color: rgb(255, 255, 255) !important; /* Met le fond de la barre en blanc */
+    position: fixed !important; /* Permet de définir la position de la barre comme fixe */
+    top: 0; /* Défini la postion de la barre en haut */
+    z-index: 200; /* Une valeur élevée ici permet de s'assurer que l'élément est au dessus des autres */
+    width: 98%; /* Défini la largeur de l'élément comme étant 100% de la largeur de l'écran */
 }
